--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0-beta2/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-BmbxuPwQa2lc/FVzBcNJ7UAyJxM6wuqIj61tLrc4wSX0szH/Ev+nYRRuWlolflfl" crossorigin="anonymous">
 
     <title>Portofolio de Sylvie</title>
+    <link rel="icon" href="favicon.ico">
   </head>
   <body>
     <h1>Bonjour et bienvenu sur mon portofolio</h1>
