--- a/pages/cv.html
+++ b/pages/cv.html
@@ -30,7 +30,7 @@ and open the template in the editor.
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item">
-                            <a href="index2.html" class="nav-link"><span class="fa fa-home"></span> Accueil</a>
+                            <a href="../index.html" class="nav-link"><span class="fa fa-home"></span> Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a href="pages/cv.html" class="nav-link"><span class="fa fa-id-badge"></span> CV</a>
