--- a/index.html
+++ b/index.html
@@ -4,13 +4,13 @@
         <!-- Required meta tags -->
         <meta charset="utf-8">
         <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no">
-        <meta name="description" content="Portfolio d’Amélia Pilou - BTS SIO SLAM">
+        <meta name="description" content="Portfolio de Sophie - BTS SIO SLAM">
         <meta name="author" content="Amélia Pilou">
 
         <!-- Bootstrap CSS -->
         <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
 
-        <title>Portfolio d'Amélia Pilou (BTS SIO 2020)</title>
+        <title>Portfolio de Sophie (BTS SIO 2020)</title>
         <link rel="icon" href="favicon.ico">
         <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" 
               rel="stylesheet">
@@ -26,7 +26,7 @@
                 <div id="navbar" class="navbar-collapse collapse">
                     <ul class="nav navbar-nav">
                         <li class="active nav-item">
-                            <a href="index2.html" class="nav-link"><span class="fa fa-home"></span> Accueil</a>
+                            <a href="index.html" class="nav-link"><span class="fa fa-home"></span> Accueil</a>
                         </li>
                         <li class="nav-item">
                             <a href="pages/cv.html" class="nav-link"><span class="fa fa-id-badge"></span> CV</a>
