--- a/pages/cv.html
+++ b/pages/cv.html
@@ -186,8 +186,112 @@ and open the template in the editor.
                             </div>
                     </div>
 
+                    
+                    </div>
                     <div class="col-xs-12 col-sm-5">
                            <!--partie de droite-->
+                           <div class="rubrique clearfix">
+                            <h2><span class="fa fa-user"></span> Me contacter</h2>
+                            <div class="meContacter">
+                                <div class="details float-left">
+                                    <a href="mailto:amelia.pilou@gmail.com?subject=Contact depuis le CV en ligne" title="Mail de Amélia Pilou"><img class="contact-icon" src="../images/cv/mail-dreamstale47.png" alt="Icone de mail"> GMail.com</a></div>
+                            </div>
+                            <div class="meContacter">
+                                <div class="details float-left"> <a href="https://twitter.com/AmeliaPILOU" title="Lien vers la page Twitter de @AmeliaPilou"><img class="contact-icon" src="../images/cv/twitter-dreamstale71.png" alt="Icone de Twitter"> Twitter </a></div>
+                            </div>
+                            <div class="meContacter">
+                                <div class="details float-left"> <a href="http://fr.linkedin.com/in/ameliaPilou" title="Lien vers le profil LinkedIn de Amélia Pilou">
+                                        <img class="contact-icon" src="../images/cv/linkedin-dreamstale45.png" alt="Icone de LinkedIn"> LinkedIn</a>
+                                </div>
+                            </div>
+                            <div class="meContacter">
+                                <div class="details float-left"> <a href="https://github.com/AmeliaPilou/" title="Lien vers le profil GitHub d'Amélia Pilou">
+                                        <img class="contact-icon" src="../images/cv/github2-dreamstale35.png" alt="Icone de GitHub"> GitHub</a>
+                                </div>
+                            </div>
+                            <div class="meContacter">
+                                <div class="details float-left"> <a href="skype:ameliapilou?userinfo" title="Lien vers le profil Skype d'Amélia Pilou">
+                                        <img class="contact-icon" src="../images/cv/skype-dreamstale61.png" alt="Icone de Skype"> Skype</a>
+                                </div>
+                            </div>
+                            <div class="meContacter">
+                                <div class="details float-left"> <a href="https://instagram.com/AmeliaPilou" title="Lien vers le profil Instagram d'Amélia Pilou">
+                                        <img class="contact-icon" src="../images/cv/instagram-dreamstale43.png" alt="Icone de Instagram"> Instagram</a>
+                                </div>
+                            </div>
+                            <div id="langues" class="rubrique clearfix">
+                                <h2><span class="fa fa-flag"></span> Langue</h2>
+                                <div class="container">
+                                    <div class="langue">Français</div>
+                                    <div class="niveau">
+                                        <span class="badge badge-dark">A1</span>
+                                        <span class="badge badge-dark">A2</span>
+                                        <span class="badge badge-dark">B1</span>
+                                        <span class="badge badge-dark">B2</span>
+                                        <span class="badge badge-dark">C1</span>
+                                        <span class="badge badge-success">C2</span>
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="langue">Anglais</div>
+                                    <div class="niveau">
+                                        <span class="badge badge-dark">A1</span>
+                                        <span class="badge badge-dark">A2</span>
+                                        <span class="badge badge-dark">B1</span>
+                                        <span class="badge badge-dark">B2</span>
+                                        <span class="badge badge-success">C1</span>
+                                        <span class="badge badge-dark">C2</span>
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="langue">Portugais</div>
+                                    <div class="niveau">
+                                        <span class="badge badge-dark">A1</span>
+                                        <span class="badge badge-dark">A2</span>
+                                        <span class="badge badge-dark">B1</span>
+                                        <span class="badge badge-dark">B2</span>
+                                        <span class="badge badge-success">C1</span>
+                                        <span class="badge badge-dark">C2</span>
+                                    </div>
+                                </div>
+                                <div class="container">
+                                    <div class="langue">Espagnol</div>
+                                    <div class="niveau">
+                                        <span class="badge badge-dark">A1</span>
+                                        <span class="badge badge-dark">A2</span>
+                                        <span class="badge badge-success">B1</span>
+                                        <span class="badge badge-dark">B2</span>
+                                        <span class="badge badge-dark">C1</span>
+                                        <span class="badge badge-dark">C2</span>
+                                    </div>
+                                </div>
+                            </div>
+                            <div id="competences" class="rubrique clearfix">
+                                <h2><span class="fa fa-wrench"></span> Compétences</h2>
+                                <div class="container">
+                                    <div class="libelle">Intégration web</div>
+                                    <div class="classement classement5"></div>
+                                </div>
+                                <div class="container">
+                                    <div class="libelle">Dév. web</div>
+                                    <div class="classement classement4"></div>
+                                </div>
+                                <div class="container">
+                                    <div class="libelle">Administration</div>
+                                    <div class="classement classement3"></div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="rubrique clearfix">
+                            <h2><span class="fa fa-music"></span> Passions</h2>
+                            <div class="passion"> <span class="fa fa-heart"></span> Sécurité</div>
+                            <div class="passion"> <span class="fa fa-heart"></span> Dév. Web</div>
+                            <div class="passion"> <span class="fa fa-heart"></span> Dév. Android</div>
+                            <div class="passion"> <span class="fa fa-heart"></span> Projets</div>
+                            <div class="passion"> <span class="fa fa-heart"></span> Running</div>
+                            <div class="passion"> <span class="fa fa-heart"></span> Lecture</div>
+                            <div class="passion"> <span class="fa fa-heart"></span> Musique</div>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -241,7 +345,7 @@ and open the template in the editor.
                 <p class="text-center" id="copyright">© Amélia Pilou 2019</p>
 
         </footer>
-    </div>
+    
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
